--- a/public/jump-go/src/styles.css
+++ b/public/jump-go/src/styles.css
@@ -1,1 +1,57 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+html {
+    height:100%;
+    /* overflow: hidden !important; */
+}
+
+body {
+    margin:0px;
+    height:100%
+}
+
+.root {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+
+.full-screen {
+    width: 100%;
+    height: 100%;
+}
+
+.full-width {
+    width: 100%;
+}
+
+.full-height {
+    height: 100%;
+}
+
+.overflow-y-auto {
+    overflow-y: auto;
+}
+
+.margin-5px {
+    margin: 5px !important;
+}
+
+.padding-5px {
+    padding: 5px;
+}
+
+app-body {
+    overflow: auto;
+}
+
+app-convert {
+    height: 100%;
+    width: 100%;
+}
+
+app-go {
+    height: 100%;
+    width: 100%;
+}
